# multi_camera_setup

./: .gitignore  CMakeLists.txt  README.md  ball_pos_reality.csv
calibration/: cameras.json
csv_files/: ball_pos_real.csv
gt/: ball_pos_gt.csv
include/multi_camera_setup/: camera.h  kalman.h  tracking.h  utils.h
l2graph/: create_graph.py
src/: CMakeLists.txt  main.cpp  main.h
src/include/: camera.h  camera_parameters.h  tracking.h  utils.h
